--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
-.continar{
+.container{
     position: absolute;
     top: 10%;
-    left: 50%;
+    left: 15%;
     margin-top: -50px;
     margin-left: -50px;
     width: 100px;
@@ -31,3 +31,55 @@
   gap: 50px;
 
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed; /* חשוב ליישור מוחלט */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
+  word-wrap: break-word;
+  font-size: 15px;
+}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+}
+th .th-text {
+  display: inline-block;
+  margin-left: 20px;
+}
+th .th-textSpec {
+  display: inline-block;
+  margin-right: 50px;
+}
+table th {
+  text-align: left;
+  padding-left: 25px;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+td:nth-child(2), th:nth-child(2) {
+  white-space: nowrap;
+}
+
+
+td img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+
