--- a/views/digimonTable.ejs
+++ b/views/digimonTable.ejs
@@ -1,22 +1,18 @@
   <% digimons.forEach(digimon=> { %>
     <tr>
-      <td><img src="<%= digimon.Photo %>" alt="Photo" width="40" /></td>
-      <td><%= digimon.Name %></td>
-      <td><%= digimon.Rank %></td>
-      <td><%= digimon.Level %></td>
-      <td><%= digimon.Attribute %></td>
-      <td><%= digimon.Hp %>/<%= digimon.Attack %>/<%= digimon.Defence %></td>
+      <td>
+        <a href="" class="openphoto">
+        <img class="Photourl"  src="<%= digimon.photo %>" alt="Photo" width="40" />
+      </a>
+      </td>
+      <td><%= digimon.name %></td>
+      <td><%= digimon.rank %></td>
+      <td><%= digimon.level %></td>
+      <td><%= digimon.type %></td>
+      <td><%= digimon.hp %> / <%= digimon.attack %> / <%= digimon.defense %></td>
+      <td><%= digimon.level %></td>
+      <td><%= digimon.experience %> /  <%= digimon.levelUPExp %></td>
       <td >
-        <a  class="btn btn-primary btn-active-light-primary btn-flex btn-center btn-sm"
-           data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
-          Actions  
-          <i class="fa fa-arrow-down ms-2"></i>
-        </a>
-
-        <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-semibold fs-7 w-125px py-4" data-kt-menu="true">
-          <div class="menu-item px-3">
-            <a href="/edit" class="menu-link px-3">Edit</a>
-          </div>
           <div class="menu-item px-3">
             <a href="#" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
           </div>
