--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,9 @@
     <th><span class="th-text">Actions</span></th>
   </tr>
 </thead>
-<tbody><%- include('digimonTable') %></tbody>
+<tbody id="userTable"></tbody>
 </table>
+<%- include('loginSystem/loginPage') %>
 </div>
 </div>
 
@@ -75,7 +76,6 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="/script.js"></script>
 </html>
-
 
 
 
