--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page</title>
+    <title>Home Page</title> 
     <link rel="stylesheet" href="style.css">
       <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+<div class="navbar">
+   <a href="#home">Home</a>
+  </div>
     <form id="DigiForm" class="DigiDetails">
              <img id="photo" src="">
              <h3 id="name"></h3>
@@ -41,13 +44,20 @@
         </form>
     
     <div class="content d-flex flex-column flex-column-fluid" >
-		
 <div class="container" >
-<div class="text-end">
-  <button id="addDigimon" type="button" class="btn btn-primary">
-    <i class="fa fa-plus"></i> Add Digimon
-  </button>
+<div class="d-flex justify-content-between align-items-center ">
+  <div class="pagination-wrapper mb-0">
+    <ul class="pagination mb-0" id="pages">
+    </ul>
+  </div>
+
+  <div class="text-end">
+    <button id="addDigimon" type="button" class="btn btn-primary">
+      <i class="fa fa-plus"></i> Add Digimon
+    </button>
+  </div>
 </div>
+
         
 
 <table id="DigiList">
@@ -59,7 +69,6 @@
     <th><span class="th-text">Level</span></th>
     <th><span class="th-text">Attribute</span></th>
     <th><span class="th-textSpec">HP/AT/DE</span></th>
-    <th><span class="th-text">level</span></th>
     <th><span class="th-text">exp</span></th>
     <th><span class="th-text">Actions</span></th>
   </tr>
@@ -73,6 +82,9 @@
 </div>
 
 </body>
+<script>
+  const isLoggedIn = <%= isLoggedIn %>;
+</script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="/script.js"></script>
 </html>
