--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
 <body>
 <div class="navbar">
-   <a href="#home">Home</a>
+   <a href="/">Home</a>
   </div>
     <form id="DigiForm" class="DigiDetails">
              <img id="photo" src="">
@@ -45,6 +45,7 @@
     
     <div class="content d-flex flex-column flex-column-fluid" >
       <%- include('DigimonSystem/battleSystem') %>
+<div id="digimon-select-container"></div>
 <div class="container" >
    <button class="battle-button">Battle</button>
   <div class="text-end">
