--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,8 @@ td img {
 
 #addDigimon,
 #DigiList,
-#userTable {
+#userTable,
+#digimon-select-container {
   display: none;
 }
 
@@ -128,6 +129,9 @@ td img {
   background-color: blue;
   transition: width 0.3s ease;
 }
+
+
+
 .menu{
   position: absolute;
   right: 0;  
@@ -243,21 +247,17 @@ td img {
 }
 
 .display-screen {
+  background-image: url("/assets/photos/Digimonbeach.jpg");
   background-color: white;
   border: 3px solid #000;
   width: 600px;
   height: 250px;
+  position: relative; 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: stretch;
+  justify-content: flex-start;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-}
-
-.digimon-img {
-  width: 96px;
-  height: 96px;
-  image-rendering: pixelated;
 }
 
 .battle-screen {
@@ -304,9 +304,120 @@ td img {
 .battle-btn:hover {
   background: linear-gradient(to bottom, #ffe08a, #ffbd2b);
 }
+
 .battle-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f4f4f4;
 }
+
+.progress-wrapper-battle {
+  width: 100%;
+  height: 20px;
+  background-color: #eee;
+  border-radius: 10px;
+  border: 2px black;
+  overflow: hidden;
+  position: relative;
+}
+
+.opponent-health-bar{
+  margin-right: 340px;
+  margin-top: 5px;
+  
+  width: 250px;
+  height: 40px;
+  border: 2px solid #fff;
+  border-radius: 20px;
+  
+  padding: 7px;
+
+  background: gray;
+
+}
+
+.opponent-percentage{
+  width: 99%;
+  margin: 0 auto;
+  background: red;
+  
+  color: #333;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.opponent-digimon-img {
+  width: 30%;
+  height: 170px;
+  image-rendering: pixelated;
+  position: absolute;
+  top: 0%;
+  right: 7%;
+}
+
+.your-percentage{
+  width: 99%;
+  margin: 0 auto;
+  background: red;
+  
+  color: #333;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.your-health-bar{
+  margin-top: 26%;
+  margin-left: 57.7%;
+  width: 250px;
+  height: 40px;
+  border: 2px solid white;
+  border-radius: 20px;
+  
+  padding: 7px;
+
+  background: grey;
+
+}
+
+.your-digimon-img {
+  width: 30%;
+  height: 170px;
+  image-rendering: pixelated;
+  position: absolute;
+  bottom: 0%;
+  left: 7%;
+}
+.your-battleName{
+   position: absolute;
+  bottom: 15%;
+  left:59%
+}
+/* 
+.progress-bar-battle {
+  width: 50%;
+  height: 100%;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.hp-text{
+  color: #000;
+}
+
+.progress-bar-battle-text {
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  z-index: 1;
+} */
+
+
+
