--- a/views/DigimonSystem/battleSystem.ejs
+++ b/views/DigimonSystem/battleSystem.ejs
@@ -8,7 +8,7 @@
         </div>
         <h5 id="opponent-battleName"></h5>
       </div>   
-      <img id="opponent-battlePhoto" src="" alt="Digimon" class="opponent-digimon-img" title="" >
+      <img id="opponent-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="opponent-digimon-img" title="" >
       <h5 id="your-battleName" class="your-battleName"></h5>
         <div class="your-health-bar">
         <div class="your-progress-bar">
@@ -16,7 +16,7 @@
         </div>
         </div>
         </div>
-         <img id="your-battlePhoto" src="" alt="Digimon" class="your-digimon-img" title="">
+         <img id="your-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="your-digimon-img" title="">
     </div>
     
 
