--- a/views/DigimonSystem/userdigimons.ejs
+++ b/views/DigimonSystem/userdigimons.ejs
@@ -3,8 +3,10 @@
 <select id="digimon-select">
   <option value="">Please choose an option</option>
   <% digimons.forEach(digimon => { %>
-  <option data-rank="<%= digimon.rank %>" data-name="<%= digimon.name %>"data-photo="<%= digimon.photo %>"
-     data-hp="<%=digimon.hp %>"  data-at="<%= digimon.attack %>"  data-de="<%= digimon.defense %>">
+  <option data-rank="<%= digimon.rank %>" data-name="<%= digimon.name %>"
+    data-level="<%= digimon.level %>"
+    data-photo="<%= digimon.photo %>" data-hp="<%=digimon.hp %>"  
+    data-at="<%= digimon.attack %>"  data-de="<%= digimon.defense %>">
     <%= digimon.name %>
     &nbsp;
     <%= digimon.level %>
