--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
 <body>
 <div class="navbar">
    <a href="/">Home</a>
+   <a href="/logout" class="logout-btn">Logout</a>
   </div>
     <form id="DigiForm" class="DigiDetails">
              <img id="photo" src="">
