--- a/views/DigimonSystem/battleSystem.ejs
+++ b/views/DigimonSystem/battleSystem.ejs
@@ -8,7 +8,9 @@
         </div>
         <h5 id="opponent-battleName"></h5>
       </div>   
-      <img id="opponent-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="opponent-digimon-img" title="" >
+      <img id="opponent-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="opponent-digimon-img" title=""
+        data-hp=""  data-maxhp="" 
+        data-at=""  data-de="" >
       <h5 id="your-battleName" class="your-battleName"></h5>
         <div class="your-health-bar">
         <div class="your-progress-bar">
@@ -16,18 +18,20 @@
         </div>
         </div>
         </div>
-         <img id="your-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="your-digimon-img" title="">
+         <img id="your-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="your-digimon-img" title=""
+         data-hp=""   data-maxhp=""
+          data-at=""  data-de="">
     </div>
     
 
     <div class="battle-screen">
       <div class="text-box">
-        <p>What will your Digimon do?</p>
+        <p class="battle-message">What will your Digimon do?</p>
       </div>
 
       <div class="options-box">
         <button class="battle-btn">FIGHT</button>
-        <button class="battle-btn">RUN</button>
+        <button class="run-btn">RUN</button>
       </div>
     </div>
   </div>
