continue work on battle system(add experiance system)

--- a/views/DigimonSystem/battleSystem.ejs
+++ b/views/DigimonSystem/battleSystem.ejs
@@ -20,7 +20,8 @@
         </div>
          <img id="your-battlePhoto" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="Digimon" class="your-digimon-img" title=""
          data-hp=""   data-maxhp=""
-          data-at=""  data-de="">
+          data-at=""  data-de=""
+          data-id="">
     </div>
     
 
