--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,17 @@
 <head>
     <title>Home Page</title> 
     <link rel="stylesheet" href="style.css">
-      <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <div class="navbar">
-   <a href="/">Home</a>
-   <a href="/logout" class="logout-btn">Logout</a>
-  </div>
 </head>
 
 <body>
-
+  <div class="bar">
+  <div class="navbar">
+    <a href="/">Home</a>
+    <a href="/logout" class="logout-btn">Logout</a>
+  </div>
+  </div>
     <form id="DigiForm" class="DigiDetails">
              <img id="photo" src="">
              <h3 id="name"></h3>
@@ -88,6 +86,7 @@
   const isLoggedIn = <%= JSON.stringify(isLoggedIn) %>;
 </script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="/script.js"></script>
 </html>
 
