--- a/views/DigimonSystem/digimonTable.ejs
+++ b/views/DigimonSystem/digimonTable.ejs
@@ -26,9 +26,7 @@
   </button>
   <div class="dropdown-menu">
     <button class="dropdown-item deleteDigi" type="button" data-id="<%= digimon.id %>">Delete</button>
-    <button class="dropdown-item evolveDigi" type="button" 
-    data-id="<%= digimon.id %>" data-level="<%= digimon.level%>" data-rank="<%= digimon.rank %>"
-      >Evolve</button>
+    <button class="dropdown-item evolveDigi" type="button" data-id="<%= digimon.id %>">Evolve</button>
   </div>
 </div>
     </td>
