--- a/views/loginSystem/loginPage.ejs
+++ b/views/loginSystem/loginPage.ejs
@@ -1,4 +1,5 @@
 <div class="login-container">
+  <span id="errorlogin"></span>
   <form class="login-form">
     <label for="username">Username</label>
     <input type="text" id="username" placeholder="">
@@ -7,7 +8,7 @@
     <input type="password" id="password" placeholder="">
 
     <button type="submit" class="login-btn">Login</button>
-
+    <button type="submit" class="register-btn">Register</button>
     <a href="#" class="forgot-password">Forgot your password?</a>
   </form>
 </div>
