--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
   <div class="bar">
   <div class="navbar">
     <a href="/">Home</a>
+    <a href="/">Statistic</a>
+    <a href="/">Shop</a>
     <a href="/logout" class="logout-btn">Logout</a>
   </div>
   </div>
@@ -85,6 +87,9 @@
 </body>
 <script>
   const isLoggedIn = <%= JSON.stringify(isLoggedIn) %>;
+<% if (isLoggedIn) { %>
+  const user = <%- JSON.stringify(user) %>;
+<% } %>
 </script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
