--- a/views/loginSystem/loginPage.ejs
+++ b/views/loginSystem/loginPage.ejs
@@ -9,6 +9,12 @@
 
     <button type="submit" class="login-btn">Login</button>
     <button type="submit" class="register-btn">Register</button>
+
+
+    <div>
+    <label>remamber you?  </label>
+    <input type="checkbox" id="remamber" />
+    </div>
     <a href="#" class="forgot-password">Forgot your password?</a>
   </form>
 </div>
