--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,9 @@
     <a href="/logout" class="logout-btn">Logout</a>
   </div>
   </div>
+  <img src=""/>
+  <div class="message">
+  </div>
     <form id="DigiForm" class="DigiDetails">
              <img id="photo" src="">
              <h3 id="name"></h3>
