complete email verification,start reset password

--- a/views/RegisterSystem/registerPage.ejs
+++ b/views/RegisterSystem/registerPage.ejs
@@ -19,5 +19,7 @@
     <input type="password" id="confirm-password" placeholder="You have to remember that">
 
     <button type="submit" class="create-btn">Create Account</button>
+
+    <a class="back-link">← Back to Login</a>
   </form>
 </div>
