--- a/views/loginSystem/loginPage.ejs
+++ b/views/loginSystem/loginPage.ejs
@@ -15,6 +15,6 @@
     <label>remamber you?  </label>
     <input type="checkbox" id="remamber" />
     </div>
-    <a href="#" class="forgot-password">Forgot your password?</a>
+    <a class="forgot-password">Forgot your password?</a>
   </form>
 </div>
