--- a/public/style.css
+++ b/public/style.css
@@ -107,7 +107,8 @@ td img {
 #digimon-select-container,
 .bar,
 .register-container,
-.message {
+.message,
+.forgot-container {
   display: none;
 }
 
@@ -235,6 +236,7 @@ td img {
 .login-form input {
   margin: 0.5vw;
   border-radius: 4px;
+  margin-left: -2px;
 }
 .login-btn {
   margin: 20px 0 10px;
@@ -295,7 +297,7 @@ td img {
   width: 300px;
   margin: 50px auto;
   padding: 25px;
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-radius: 10px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
@@ -547,6 +549,69 @@ body {
   bottom: 15%;
   left:59%
 }
+
+/* forgetpasspage */
+
+
+
+  .forgot-container {
+      background: #f5f5f5;
+      padding: 20px 30px;
+      border-radius: 10px;
+      width: 250px;
+      margin: 50px auto;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .forgot-container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin: 10px 0 5px;
+      font-weight: bold;
+      color: #777;
+    }
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: 1px solid #aaa;
+      border-radius: 5px;
+    }
+
+    .reset-btn {
+      background: linear-gradient(to bottom, #fbdc70 0%, red 100%);
+      color: black;
+      font-weight: bold;
+      border: none;
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      box-shadow: 0 2px 0 #d49900;
+      cursor: pointer;
+    }
+
+    .reset-btn:hover {
+      background: linear-gradient(to bottom, #ffe08a 0%, red 100%);
+      color: white;
+    }
+
+    .back-link {
+      display: block;
+      text-align: center;
+      margin-top: 15px;
+      color: #555;
+      text-decoration: none;
+    }
+
+    .back-link:hover {
+      text-decoration: underline;
+    }
 
 
 /* 
