--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,7 @@
   </div>
 <%- include('loginSystem/loginPage') %>
 <%- include('RegisterSystem/registerPage') %>
+<%- include('loginSystem/forgotpasspage') %>
 </div>
 </div>
 
@@ -93,6 +94,7 @@
 <% if (isLoggedIn) { %>
   const user = <%- JSON.stringify(user) %>;
 <% } %>
+
 </script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
