complete email verification,start reset password

--- a/views/RegisterSystem/registerPage.ejs
+++ b/views/RegisterSystem/registerPage.ejs
@@ -20,6 +20,6 @@
 
     <button type="submit" class="create-btn">Create Account</button>
 
-    <a class="back-link">← Back to Login</a>
+    <a class="back-link">Back to Login</a>
   </form>
 </div>
