--- a/views/loginSystem/forgotpasspage.ejs
+++ b/views/loginSystem/forgotpasspage.ejs
@@ -5,14 +5,13 @@
 </head>
 <body>
   <div class="forgot-container">
-    <h2 id="resetPass">Reset Password</h2>
-    <form action="/reset-password" method="POST">
+    <span id="errorreset"></span>
+    <h4 id="resetPass" style="margin-left: 4%;">Reset Password</h4>
       <label for="email">Email</label>
       <input type="email" id="R-email" name="email" required>
 
       <button class="reset-btn" type="submit">Reset Password</button>
-    </form>
-    <a class="back-link" >← Back to Login</a>
+    <a class="back-link" >Back to Login</a>
   </div>
 </body>
 </html>
