--- a/views/userconfirm.ejs
+++ b/views/userconfirm.ejs
@@ -7,13 +7,17 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: white;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       font-family: Arial, sans-serif;
-    }
+      background-image: url("/assets/photos/Digimonbackground.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+        }
 
     .confirmation-box {
       background-color: #f8f8f8;
