--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,8 @@ td img {
 .bar,
 .register-container,
 .message,
-.forgot-container {
+.forgot-container,
+.reset-container {
   display: none;
 }
 
@@ -641,3 +642,49 @@ body {
 
 
 
+/* reset password */ 
+
+
+.reset-container {
+  width: 260px;
+  padding: 20px;
+  margin: 50px auto;
+  background: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  font-family: Arial, sans-serif;
+}
+
+.reset-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.reset-form label {
+  margin: 10px 0 5px;
+  font-weight: bold;
+  color: #888;
+}
+
+.reset-form input {
+  margin: 0.5vw;
+  border-radius: 4px;
+  margin-left: -2px;
+}
+.Creset-btn {
+  margin: 20px 0 10px;
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+  background: linear-gradient(to bottom, #fbdc70 0%, #f8b500 100%);
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 2px 0 #d49900;
+}
+
+.Creset-btn:hover {
+  background: linear-gradient(to bottom, #ffe08a 0%, #ffbd2b 100%);
+  color: white;
+  text-decoration: none;
+}
