--- a/public/style.css
+++ b/public/style.css
@@ -688,3 +688,32 @@ body {
   color: white;
   text-decoration: none;
 }
+
+
+/* statistic */
+.statistic-container {
+  width: 50%;
+  height: 40%;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  border: 4px solid #000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  justify-content: center;
+  align-items: center;
+}
+.canvas-chart{
+  width:100%;
+  max-width:400px;
+  position: absolute;
+  bottom: 0;
+}
+.statistic-controls {
+  display: flex;
+  align-items: center;    
+  gap: 10px;              
+  margin-left: 7%;
+  margin-top: 2%;
+}
