--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
 <body>
   <div class="bar">
   <div class="navbar">
     <a href="/">Home</a>
-    <a href="/">Statistic</a>
+    <a href="" class="Statistic">Statistic</a>
     <a href="/">Shop</a>
     <a href="/logout" class="logout-btn">Logout</a>
   </div>
@@ -99,8 +100,6 @@
 <% if (Havetoken) { %>
   const token = <%- JSON.stringify(token) %>;
 <% } %>
-
-
 </script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
