--- a/views/DigimonSystem/statistic.ejs
+++ b/views/DigimonSystem/statistic.ejs
@@ -3,15 +3,21 @@
     <select id="digimon-statistic">
         <option value="">all</option>
         <% digimons.forEach(digimon => { %>
-            <option data-id="<%= digimon.id %>" data-name="<%= digimon.name %>">
+            <option data-id="<%= digimon.id %>" data-name="<%= digimon.name %>" data-photo="<%= digimon.photo %>">
                   <%= digimon.name %>
                     &nbsp;
                     <%= digimon.level %>
             </option>
         <% }) %>
     </select>
-    <button id="statistic-digimon" class="btn btn-choose">choose</button>
+    <button id="statistic-digimon" class="btn-choose">choose</button>
     </div>
+     <img id="statistic-photo" src="" alt="Digimon Photo" class="mb-3 statistic-photo"/>
     <canvas id="digiChart" class="canvas-chart">
     </canvas>
+    <canvas id="winsCanvas">
+        </canvas>
+
+    <canvas id="losesCanvas">
+        </canvas>
 </div>
