--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="/">Home</a>
     <a href="" class="Statistic">Statistic</a>
-    <a href="/">Shop</a>
+    <a href="" class="Shop">Shop</a>
     <a href="/logout" class="logout-btn">Logout</a>
   </div>
   </div>
@@ -64,7 +64,7 @@
 
 <table id="DigiList">
 <thead>
-  <tr>
+  <tr class="digimonsT">
     <th><span class="th-text">Photo</span></th>
     <th><span class="th-text">Name</span></th>
     <th><span class="th-text">Rank</span></th>
@@ -72,6 +72,14 @@
     <th><span class="th-text">Attribute</span></th>
     <th><span class="th-textSpec">HP/AT/DE</span></th>
     <th><span class="th-text">exp</span></th>
+    <th><span class="th-text">Actions</span></th>
+  </tr>
+    <tr class="shopT">
+    <th><span class="th-text">Photo</span></th>
+    <th><span class="th-text">Name</span></th>
+    <th><span class="th-text">Description</span></th>
+    <th><span class="th-text">Price</span></th>
+    <th><span class="th-text">Amount</span></th>
     <th><span class="th-text">Actions</span></th>
   </tr>
 </thead>
