--- a/public/style.css
+++ b/public/style.css
@@ -109,7 +109,8 @@ td img {
 .register-container,
 .message,
 .forgot-container,
-.reset-container {
+.reset-container,
+.shopT {
   display: none;
 }
 
@@ -733,3 +734,19 @@ body {
     top: 200px;    
     left: 450px; 
 }
+
+/* shop */
+
+  .btn.btn-buy {
+      background-color: #388E3C !important;
+      color: white !important;
+      padding: 5px 10px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn.btn-buy:hover {
+      background-color: #388E3C !important;
+    }
