--- a/views/shopSystem/shoppage.ejs
+++ b/views/shopSystem/shoppage.ejs
@@ -1,6 +1,6 @@
 <% shopitems.forEach(item => { %>
   <tr>
-  <td style="position: relative;">
+  <td style="position: relative;" data-item="<%= item.id %>">
   <a href="" class="openphoto">
     <img class="ItemUrl" src="<%= item.photo %>" alt="Photo" width="40" />
   </a>
@@ -9,7 +9,7 @@
     <td><%= item.description %></td>
     <td><%= item.price %></td>
     <td>
-        <input type="number" placeholder="amount"/>
+        <input class="amount-input" type="number" placeholder="amount"/>
     </td>
 <td>
   <button class="btn btn-buy" type="button" >
