--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,6 +88,13 @@
     <th><span class="th-text">Amount</span></th>
     <th><span class="th-text">Actions</span></th>
   </tr>
+    <tr class="bagT">
+    <th><span class="th-text">Photo</span></th>
+    <th><span class="th-text">Name</span></th>
+    <th><span class="th-text">Description</span></th>
+    <th><span class="th-text">Amount</span></th>
+    <th><span class="th-text">Actions</span></th>
+  </tr>
 </thead>
 <tbody id="userTable"></tbody>
 </table>
