--- a/views/DigimonSystem/userdigimons.ejs
+++ b/views/DigimonSystem/userdigimons.ejs
@@ -1,5 +1,5 @@
 <div class="battle-container text-center d-flex flex-column align-items-center justify-content-center" style="min-height: 80vh;">
-  <h2>Select your Digimon</h2>
+  <h2 class="titleItem">Select your Digimon</h2>
 <select id="digimon-select">
   <option value="">Please choose an option</option>
   <% digimons.forEach(digimon => { %>
@@ -16,4 +16,5 @@
   <img id="selected-photo" src="" alt="Digimon Photo" style="width: 150px; height: 150px; display: none;" class="mb-3"/>
 
   <button id="submit-digimon" class="btn btn-success">Submit</button>
+  <button id="use-digimon" class="btn btn-success">Use</button>
 </div>
